methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:22: error: Unit does not take parameters
  partie()
        ^